tests/ui-vec/03-guard-is-not-send.stderr
error[E0277]: `*mut Vec<String>` cannot be sent between threads safely
  --> tests/ui-vec/03-guard-is-not-send.rs:9:32
   |
 9 |       let handle = thread::spawn(move || {
   |                    ------------- ^------
   |                    |             |
   |  __________________|_____________within this `{closure@$DIR/tests/ui-vec/03-guard-is-not-send.rs:9:32: 9:39}`
   | |                  |
   | |                  required by a bound introduced by this call
...  |
14 | |     });
   | |_____^ `*mut Vec<String>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/ui-vec/03-guard-is-not-send.rs:9:32: 9:39}`, the trait `Send` is not implemented for `*mut Vec<String>`
note: required because it appears within the type `ReusableVecGuard<'_, String, String>`
  --> src/vec.rs
   |
   | pub struct ReusableVecGuard<'parent, T1, T2>
   |            ^^^^^^^^^^^^^^^^
note: required because it's used within this closure
  --> tests/ui-vec/03-guard-is-not-send.rs:9:32
   |
 9 |     let handle = thread::spawn(move || {
   |                                ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/mod.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
